syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

import "auth.proto";
import "google/protobuf/empty.proto";

service SessionService {
  rpc Login(LoginReq) returns (LoginRes) {}
  rpc Logout(LogoutReq) returns (google.protobuf.Empty) {}
  rpc RefreshToken(RefreshTokenReq) returns (RefreshTokenRes) {}
  rpc HasAccess(HasAccessReq) returns (HasAccessRes) {}
//  rpc HasAccessSuperAdmin(HasAccessSuperAdminReq) returns (HasAccessSuperAdminRes) {}
//  rpc SessionAndTokenGenerator (SessionAndTokenReq) returns (LoginRes) {}
//  rpc UpdateSessionsByRoleId (UpdateSessionByRoleIdRequest) returns (google.protobuf.Empty) {}
}

message LoginReq {
  string email = 1;
  string password = 2;
  string x_role = 3;
}

message LoginRes {
  bool user_found = 1;
  User user = 2;
  string role_id = 3;
  Token token = 4;
  repeated Session sessions = 5;
  repeated Role roles = 6;
}

message LogoutReq {
  string access_token = 1;
}

message RefreshTokenReq {
  string refresh_token = 1;
  string role_id = 2;
}

message RefreshTokenRes {
  Token token = 6;
}

message HasAccessReq {
  string access_token = 1;
  string path = 4;
  string method = 5;
}

message HasAccessRes {
  string id = 1;
  string user_id = 2;
  string role_id = 3;
  string ip = 4;
  string data = 5;
  string expires_at = 6;
  string created_at = 7;
  string updated_at = 8;
}


message SessionAndTokenReq  {
  LoginRes login_data = 1;
}

message SessionPrimaryKey {
  string id = 1;
}

message SessionGetList {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
}

message GetSessionListRes {
  repeated Session sessions = 1;
  int32 count = 2;
}

message CreateSessionReq {
  string user_id = 1;
  string role_id = 2;
  string ip = 3;
  string data = 4;
  string expires_at = 5;
}

message UpdateSessionReq {
  string id = 1;
  string user_id = 2;
  string role_id = 3;
  string ip = 4;
  string data = 5;
  string expires_at = 6;
}